# reaper

./: .all-contributorsrc  .bashrc  .env  .env.production  .envrc  .gitattributes  .gitignore  .gitmodules  .log4brains.yml  .rustfmt.toml  .tool-versions  Cargo.toml  README.md  book.toml  clippy.toml  dbt_project.yml  eslint.config.mjs  flake.nix  foundry.toml  lefthook.yml  nx.json  package.json  pnpm-lock.yaml  project.json  rust-toolchain.toml  rustfmt.toml  socket.yaml  sonar-project.properties  storm.json  terramate.tm.hcl  tsconfig.base.json
apps/eth-engine/: .env  .envrc  Cargo.toml  Dockerfile  README.md  build.rs  entrypoint.sh  project.json
apps/eth-engine/.config/mise/: config.dev.toml  config.prod.toml
apps/eth-engine/helm/: Chart.yaml
apps/eth-engine/helm/templates/: configmap.yaml
apps/eth-engine/nix/: eth-engine.nix
apps/eth-engine/src/: lib.rs  main.rs  runner.rs
apps/eth-engine/src/cli/: misc.rs  mod.rs  run.rs  utils.rs  version_data.rs
apps/eth-engine/src/executors/: discovery_only.rs  mod.rs  range.rs  tip.rs
apps/eth-engine/src/misc/: art.rs  banner.rs  mod.rs
apps/eth-execution-telegram-bot/: .env  Cargo.toml  project.json
apps/eth-execution-telegram-bot/src/: commands.rs  constants.rs  handler.rs  lib.rs  main.rs  types.rs  utils.rs
apps/eth-order-engine/: Cargo.toml  project.json
apps/eth-order-engine/src/: lib.rs  main.rs
apps/eth-order-engine/src/abi/: mod.rs
apps/eth-order-engine/src/anvil/: actors.rs  anvil_utils.rs  mod.rs  utils.rs
apps/eth-order-engine/src/contracts/: BundleExecutor.huff
apps/eth-order-engine/src/uniswap/: utils.rs
apps/eth-order-fill-service/: Cargo.toml  README.md  project.json
apps/eth-order-fill-service/src/: main.rs
apps/eth-order-fill-service/src/abi/: IUniswapV2Factory.json  IUniswapV2Pair.json  IUniswapV2Router02.json
apps/eth-order-fill-service/src/uniswap/: mod.rs
apps/eth-order-telegram-bot/: .env  .envrc  Cargo.toml  README.md  project.json
apps/eth-order-telegram-bot/src/: constants.rs  handler.rs  lib.rs  main.rs  types.rs
crates/aws/: Cargo.toml  README.md  project.json
crates/aws/src/: lib.rs  telemetry.rs
crates/aws/src/constants/: defaults.rs  env.rs  mod.rs
crates/aws/src/utils/: config.rs  format.rs
crates/core/: Cargo.toml  README.md  project.json
crates/core/src/: error.rs  lib.rs  macros.rs  portfolio.rs  telemetry.rs  types.rs
crates/core/src/cashflow/: cashflow.rs  leg.rs  quote.rs
crates/core/src/constants/: mod.rs
crates/core/src/instruments/: instrument.rs  mod.rs  payoff.rs  ticker.rs
crates/core/src/iso/: isin.rs  iso_10383.rs  iso_3166.rs  iso_4217.rs  mod.rs
crates/core/src/time/: calendar.rs  constants.rs  date_generation.rs  date_rolling.rs  day_counting.rs  frequency.rs  holiday.rs  mod.rs  schedule.rs  stub_generation.rs  utilities.rs
crates/core/src/trading/: limit_order_book.rs  mod.rs  order.rs  order_book.rs  order_lifespan.rs  order_side.rs  order_type.rs
crates/core/src/utils/: format.rs
crates/eth/: Cargo.toml  README.md  project.json
crates/eth-core/: Cargo.toml  README.md  project.json
crates/eth-core/src/: lib.rs  types.rs
crates/eth-core/src/constants/: env.rs  mod.rs  topics.rs
crates/eth-core/src/utils/: contract.rs  convert.rs  middleware.rs  mod.rs
crates/eth-engine-classifier/: Cargo.toml  README.md  project.json
crates/eth-engine-classifier/benches/: classifier.rs  tree_operations.rs
crates/eth-engine-classifier/src/: discovery_only.rs  lib.rs
crates/eth-engine-classifier/src/classifiers/: erc20.rs  mod.rs
crates/eth-engine-classifier/src/multi_frame_classification/: mod.rs
crates/eth-engine-classifier/src/test_utils/: benches.rs  tests.rs
crates/eth-engine-classifier/src/tree_builder/: lib.rs  mod.rs  tree_pruning.rs
crates/eth-engine-core/: Cargo.toml  README.md  project.json
crates/eth-engine-core/benches/: parsing.rs
crates/eth-engine-core/src/: errors.rs  local_provider.rs  missing_token_info.rs
crates/eth-engine-core/src/decoding/: dyn_decode.rs  mod.rs  parser.rs
crates/eth-engine-core/src/test_utils/: mod.rs
crates/eth-engine-database/: Cargo.toml  README.md  build.rs  project.json
crates/eth-engine-database/benches/: cex_downloader_benchmarks.rs  cex_quotes_conversion.rs
crates/eth-engine-database/src/clickhouse/: cex_config.rs  db_client.rs  dbms.rs  mod.rs  (+3 more)
crates/eth-engine-database/tests/: db_query.rs  quotes_converter.rs
crates/eth-engine-inspect/: Cargo.toml  README.md  project.json
crates/eth-engine-inspect/benches/: inspectors.rs
crates/eth-engine-inspect/src/: discovery.rs  lib.rs
crates/eth-engine-libmdbx/: Cargo.toml  README.md  project.json
crates/eth-engine-libmdbx/src/: environment.rs  lib.rs
crates/eth-engine-macros/: Cargo.toml  README.md  project.json
crates/eth-engine-macros/src/: function_metrics.rs  lib.rs  libmdbx_test.rs
crates/eth-engine-metrics/: Cargo.toml  README.md  project.json
crates/eth-engine-metrics/src/: classifier.rs  error_layer.rs  inspectors.rs  lib.rs  prometheus_exporter.rs  range.rs
crates/eth-engine-pricing/: Cargo.toml  README.md  project.json
crates/eth-engine-pricing/benches/: it.rs  state.rs
crates/eth-engine-pricing/pricing-test-utils/: Cargo.toml  project.json
crates/eth-engine-pricing/src/: function_call_bench.rs  lib.rs  subgraph_query.rs  types.rs
crates/eth-engine-relay-api/: Cargo.toml  README.md  project.json  relay-oapi.yaml
crates/eth-engine-relay-api/src/: lib.rs
crates/eth-engine-reth-tracing/: Cargo.toml  README.md  project.json
crates/eth-engine-reth-tracing/src/: lib.rs  provider.rs
crates/eth-engine-tracing/: Cargo.toml  README.md  project.json
crates/eth-engine-types/: Cargo.toml  README.md  project.json
crates/eth-engine-types/src/: executor.rs  lib.rs  protocol.rs  rayon_utils.rs  structured_trace.rs  unordered_buffer_map.rs
crates/eth-flashbots/: Cargo.toml  README.md  project.json
crates/eth-flashbots/src/: lib.rs
crates/eth/src/: lib.rs
crates/telemetry/: Cargo.toml  README.md  project.json
crates/telemetry/src/: lib.rs  sentry.rs  tracing.rs  types.rs
(+380 files in other folders)
