## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
## Workspace
## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/eth",
    "crates/eth-flashbots",
    "crates/eth-engine-core",
    "crates/aws",
    "apps/eth-order-telegram-bot",
    "apps/eth-order-engine",
]

[workspace.package]
version = "0.0.1"
description = "💵 A monorepo containing various utilities, libraries, and applications used by Storm Software in trading processes"
repository = "https://github.com/storm-software/reaper"
edition = "2021"
authors = ["storm-software", "pat-sullivan"]
license = "Apache-2.0"
documentation = "https://stormsoftware.com/projects/reaper/docs"
homepage = "https://stormsoftware.com"
categories = [
    "config",
    "development-tools",
    "finance",
    "mathematics",
    "science",
    "algorithms",
    "simulation",
]
keywords = [
    "storm",
    "reaper",
    "storm-software",
    "trading",
    "cryptocurrency",
    "crypto",
    "ethereum",
    "quantitative-finance",
    "quantitative-trading",
    "quantitative-analysis",
    "quantitative-research",
    "algorithmic-trading",
    "monorepo",
]

[workspace.dependencies]

# Internal dependencies
reaper-core = { path = "./crates/core" }
reaper-eth = { path = "./crates/eth" }
reaper-eth-flashbots = { path = "./crates/eth-flashbots" }
reaper-eth-engine-core = { path = "./crates/eth-engine-core" }
reaper-aws = { path = "./crates/aws" }

# External dependencies
chrono = "0.4.22"
dotenvy = "0.15.7"

# Serde
serde = "1.0.205"
serde_json = "1.0.1"

# Error handling / Logging
thiserror = "1.0.44"
eyre = "0.6.8"
tracing = "0.1.37"
tracing-subscriber = "0.3"
colored = "2.0"
anyhow = "1.0.86"

# HTTP
reqwest = "0.12"
tokio = "1.39.3"

# AWS
aws-config = "1.5.5"

# Ethers
ethers = { version = "2.0.14", features = ["abigen", "ws", "rustls"] }


## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
## COMPILATION PROFILES
## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

[profile.dev]
debug = 0

[profile.release]
lto = "thin"
strip = "debuginfo"
codegen-units = 16
panic = "unwind"

## To compile a release build with debug symbols, use:
## `cargo build --profile=release-with-debug`
[profile.release-with-debug]
inherits = "release"
strip = false
lto = "fat"
debug = true

[profile.debug-fast]
inherits = "release"
strip = "none"
debug = true

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false
