## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
## Workspace
## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

[workspace]
resolver = "2"
default-members = ["apps/eth-engine", "apps/eth-order-telegram-bot"]
members = [
    "crates/core",
    "crates/telemetry",
    "crates/eth",
    "crates/eth-flashbots",
    "crates/eth-engine-macros",
    "crates/eth-engine-metrics",
    "crates/eth-engine-inspect",
    "crates/eth-engine-core",
    "crates/eth-engine-reth-tracing",
    "crates/eth-engine-relay-api",
    "crates/eth-engine-types",
    "crates/eth-engine-database",
    "crates/eth-engine-libmdbx",
    "crates/eth-engine-classifier",
    "crates/eth-engine-pricing",
    "crates/eth-engine-pricing/pricing-test-utils",
    "crates/aws",
    "apps/eth-engine",
    "apps/eth-order-telegram-bot",
    "apps/eth-order-fill-service",
]

[workspace.package]
version = "0.0.1"
description = "💀 A monorepo containing various utilities, libraries, and applications used by Storm Software in trading processes"
repository = "https://github.com/storm-software/reaper"
edition = "2021"
authors = ["storm-software", "pat-sullivan"]
license = "Apache-2.0"
documentation = "https://reaper.rs/docs"
homepage = "https://reaper.rs"
categories = [
    "config",
    "development-tools",
    "finance",
    "mathematics",
    "science",
    "algorithms",
    "simulation",
]
keywords = [
    "storm",
    "reaper",
    "storm-software",
    "trading",
    "cryptocurrency",
    "crypto",
    "ethereum",
    "mev",
    "arbitrage",
    "sandwitch",
    "flashbots",
    "blockchain",
    "defi",
    "quantitative-finance",
    "quantitative-trading",
    "quantitative-analysis",
    "quantitative-research",
    "algorithmic-trading",
    "monorepo",
]
readme = "./README.md"

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
missing-const-for-fn = "warn"
use-self = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.dependencies]
# Reaper
reaper-core = { path = "./crates/core" }
reaper-aws = { path = "./crates/aws" }
reaper-telemetry = { path = "./crates/telemetry" }
reaper-eth = { path = "./crates/eth" }
reaper-eth-flashbots = { path = "./crates/eth-flashbots" }
reaper-eth-engine-relay-api = { path = "./crates/eth-engine-relay-api" }
reaper-eth-engine-core = { path = "./crates/eth-engine-core" }
reaper-eth-engine-reth-tracing = { path = "./crates/eth-engine-reth-tracing" }
reaper-eth-engine-macros = { path = "./crates/eth-engine-macros" }
reaper-eth-engine-inspect = { path = "./crates/eth-engine-inspect" }
reaper-eth-engine-types = { path = "./crates/eth-engine-types" }
reaper-eth-engine-classifier = { path = "./crates/eth-engine-classifier" }
reaper-eth-engine-database = { path = "./crates/eth-engine-database" }
reaper-eth-engine-metrics = { path = "./crates/eth-engine-metrics" }
reaper-eth-engine-pricing = { path = "./crates/eth-engine-pricing" }
reaper-eth-engine-libmdbx = { path = "./crates/eth-engine-libmdbx" }

url = "2.5.2"
regex = "1.10.4"
dashmap = { version = "6.0.1", features = ["inline"] }

# Reth
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", package = "reth-node-ethereum", rev = "ac29b4b" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", package = "reth-tasks", rev = "ac29b4b" }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc", rev = "ac29b4b" }
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-api", rev = "ac29b4b" }
reth-rpc-types = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-types", rev = "ac29b4b" }
reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-builder", rev = "ac29b4b" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", package = "reth-provider", rev = "ac29b4b" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", package = "reth-transaction-pool", rev = "ac29b4b" }
reth-network-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-network-api", rev = "ac29b4b" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", package = "reth-primitives", rev = "ac29b4b" }
reth-db = { git = "https://github.com/paradigmxyz/reth", package = "reth-db", rev = "ac29b4b" }
reth-blockchain-tree = { git = "https://github.com/paradigmxyz/reth", package = "reth-blockchain-tree", rev = "ac29b4b" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", package = "reth-node-core", rev = "ac29b4b" }
reth-beacon-consensus = { git = "https://github.com/paradigmxyz/reth", package = "reth-beacon-consensus", rev = "ac29b4b" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", package = "reth-revm", rev = "ac29b4b" }
reth-interfaces = { git = "https://github.com/paradigmxyz/reth", package = "reth-interfaces", features = [
    "test-utils",
], rev = "ac29b4b" }
reth-stages = { git = "https://github.com/paradigmxyz/reth", package = "reth-stages", features = [
    "test-utils",
], rev = "ac29b4b" }
reth-trie = { git = "https://github.com/paradigmxyz/reth", package = "reth-trie", rev = "ac29b4b" }
reth-libmdbx = { git = "https://github.com/paradigmxyz/reth", package = "reth-libmdbx", rev = "ac29b4b" }
reth-eth-wire = { git = "https://github.com/paradigmxyz/reth", package = "reth-eth-wire", rev = "ac29b4b" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", package = "reth-payload-builder", rev = "ac29b4b" }
reth-metrics = { git = "https://github.com/paradigmxyz/reth", package = "reth-metrics", rev = "ac29b4b" }
reth-codecs = { git = "https://github.com/paradigmxyz/reth", package = "reth-codecs", rev = "ac29b4b" }
reth-codecs-derive = { git = "https://github.com/paradigmxyz/reth", rev = "ac29b4b" }

# Database
clickhouse = { git = "https://github.com/SorellaLabs/clickhouse.rs", branch = "master", features = [
    "tls",
] }

# ruint
ruint = "1.9.0"

# revm
revm = { version = "8.0.0", features = [
    "std",
    "secp256k1",
], default-features = false }
revm-primitives = { version = "3.1", features = [
    "std",
], default-features = false }
revm-inspectors = { git = "https://github.com/paradigmxyz/evm-inspectors", rev = "dc614ee" }


# Alloy
alloy-sol-types = { version = "0.7.0", features = ["json"] }
alloy-sol-macro = { version = "0.7.0", features = ["json"] }
alloy-rlp = { version = "0.3.4" }
alloy-rlp-derive = { version = "0.3.4" }
alloy-primitives = { version = "0.7.0", features = ["rlp"] }
alloy-json-abi = "0.7.0"
alloy-dyn-abi = "0.7.0 "

# Alloy core
alloy-provider = { git = "https://github.com/alloy-rs/alloy.git", rev = "39b8695", features = [
    "reqwest",
] }
alloy-transport-http = { git = "https://github.com/alloy-rs/alloy.git", rev = "39b8695" }
alloy-transport = { git = "https://github.com/alloy-rs/alloy.git", rev = "39b8695" }
alloy-network = { git = "https://github.com/alloy-rs/alloy.git", rev = "39b8695" }
alloy-json-rpc = { git = "https://github.com/alloy-rs/alloy.git", rev = "39b8695" }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy.git", rev = "39b8695", features = [
    "jsonrpsee-types",
] }
alloy-rpc-client = { git = "https://github.com/alloy-rs/alloy.git", rev = "39b8695" }

# Async
tokio = { version = "1.13.0", features = ["full", "tracing"] }
futures = "0.3.28"
async-trait = "0.1.73"

#Tracing
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
    "env-filter",
    "fmt",
] }
colored = "2.0"
prometheus = "0.13.4"

# Metrics
metrics-exporter-prometheus = "=0.12.1"
metrics-util = "0.15.0"
metrics-process = "=1.0.14"

# Logging
env_logger = "0.10.0"

# error handling
thiserror = "1.0.44"
eyre = "0.6.8"
anyhow = "1.0.44"

# http/rpc
hyper = "0.14.25"
hyper-tls = "0.5.0"
reqwest = { version = "0.12.2", default-features = false }

# Serde
serde = "1.0.209"
serde_derive = "1.0.209"
serde_json = "1.0.127"
serde_with = "3.4.0"
serde_repr = "0.1.16"

# cli
clap = { version = "4.4.6", features = ["derive"] }

# Numbers
malachite = "0.4.0"
malachite-q = "0.4.0"

# phf
phf = "0.11.2"
phf_codegen = "0.11.2"

# metrics
metrics = "0.21.1"

# misc
backon = "0.4.4"
c-kzg = "0.4.0"
hex-literal = "0.4.1"
rayon = "1.7.0"
dotenvy = "0.15.7"
semver = "1.0"
lazy_static = "1.4.0"
once_cell = "1.18.0"
itertools = "0.11.0"
parking_lot = "0.12.1"
toml = "0.8.2"
auto_impl = "1.1.0"
strum = "0.25.0"
serial_test = "2.0.0"
derive_more = "0.99.17"
rkyv = { git = "https://github.com/rkyv/rkyv.git", branch = "0.7-hashbrown-0.14", features = [
    "validation",
] }
num_cpus = "1.16.0"
redefined = { git = "https://github.com/SorellaLabs/redefined" }
bytes = "1.5"
bitflags = "2.5.0"
chrono = "0.4.19"

arrow = "51.0.0"
polars = { version = "0.38.3", features = ["lazy"] }
parquet = { version = "51.0.0", features = ["async"] }
indicatif = "0.17.8"

# filesystem
fs2 = "0.4.3"
fs_extra = "1.3.0"
filesize = "0.2.0"
tar = "0.4.41"
flate2 = "1.0.30"

# AWS
aws-config = "1.5.5"

# Ethers
ethers = { version = "2.0.14", features = ["abigen", "ws", "rustls"] }

## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
## COMPILATION PROFILES
## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

[profile.dev]
debug = true
incremental = true

[profile.release]
lto = "thin"
strip = "debuginfo"
codegen-units = 16
panic = "unwind"

[profile.release-with-debug]
inherits = "release"
strip = false
lto = "fat"
debug = true

[profile.debug-fast]
inherits = "release"
strip = "none"
debug = true

[profile.prod]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false
