[package]
name = "reaper-eth-engine"
publish = false
version = "0.1.0"
edition = "2021"

[dependencies]
reaper-eth-engine-core.workspace = true
reaper-eth-engine-reth-tracing.workspace = true
reaper-eth-engine-macros.workspace = true
reaper-eth-engine-inspect.workspace = true
reaper-eth-engine-types.workspace = true
reaper-eth-engine-classifier.workspace = true
reaper-eth-engine-database.workspace = true
reaper-eth-engine-metrics.workspace = true
reaper-eth-engine-pricing.workspace = true
reaper-telemetry.workspace = true
reaper-eth-engine-libmdbx = { workspace = true, features = [
    "read-tx-timeouts",
] }

malachite.workspace = true
toml = "0.8.2"
indicatif.workspace = true

# filesystem
fs2.workspace = true
fs_extra.workspace = true
filesize.workspace = true
tar.workspace = true
flate2.workspace = true
directories = "5.0.1"

# Async
tokio = { workspace = true }
async-scoped = { version = "0.9.0", features = ["use-tokio"] }
futures.workspace = true
reqwest.workspace = true

# Reth
reth-tasks.workspace = true
reth-rpc.workspace = true
reth-rpc-api.workspace = true
reth-rpc-types.workspace = true
reth-provider.workspace = true
reth-node-core.workspace = true
reth-transaction-pool.workspace = true
reth-network-api.workspace = true
reth-primitives.workspace = true
reth-db.workspace = true
reth-blockchain-tree.workspace = true
reth-beacon-consensus.workspace = true
#reth-revm.workspace = true
reth-interfaces.workspace = true

# Alloy
alloy-primitives.workspace = true
alloy-sol-macro = { workspace = true, features = ["json"] }
alloy-sol-types = { workspace = true, features = ["json"] }

alloy-provider.workspace = true
alloy-transport-http.workspace = true
alloy-transport.workspace = true
alloy-network.workspace = true
alloy-json-rpc.workspace = true
alloy-rpc-types.workspace = true
alloy-rpc-client.workspace = true

# tracing
tracing.workspace = true
tracing-subscriber.workspace = true
colored.workspace = true

# misc
eyre.workspace = true
dotenvy.workspace = true
num_cpus.workspace = true
strum = { workspace = true, features = ["derive"] }
thiserror.workspace = true
human_bytes = "0.4.1"
boyer-moore-magiclen = "0.2.16"
comfy-table = "7.0"
serde_json.workspace = true

# http/rpc
hyper.workspace = true

# cli
clap.workspace = true

# logging
rayon.workspace = true
cfg-if = "1.0.0"
sentry = "0.34.0"

# prometheus
metrics-process.workspace = true
prometheus = "0.13.4"
itertools.workspace = true
fdlimit = "0.3.0"
dhat = "0.3.3"

serde = { workspace = true, features = ["derive"] }
db-interfaces = { git = "https://github.com/SorellaLabs/db-interfaces", features = [
    "test-utils",
] }
clickhouse.workspace = true

prettytable-rs = "0.10"

# banner
indoc = "2"
crossterm = "0.28.1"
regex.workspace = true
rand = "0.8.5"
ansi_term = "0.12.1"
ansi-parser = "0.9.0"
ahash = "0.8.11"

tikv-jemallocator = { version = "0.6.0", features = [
    "unprefixed_malloc_on_supported_platforms",
] }
const_format = { version = "0.2.32", features = ["rust_1_64"] }

[build-dependencies]
vergen = { version = "8.0.0", features = ["build", "cargo", "git", "gitcl"] }

[features]
default = [
    "reaper-eth-engine-core/default",
    "reaper-eth-engine-classifier/default",
    "jemalloc",
]
jemalloc = ["reaper-eth-engine-metrics/jemalloc"]
jemalloc-prof = ["jemalloc", "tikv-jemallocator/profiling"]
dhat-heap = []
sorella-server = ["local-reth", "local-clickhouse"]
tests = [
    "reaper-eth-engine-core/tests",
    "reaper-eth-engine-database/tests",
    "reaper-eth-engine-classifier/tests",
    "reaper-eth-engine-inspect/tests",
    "reaper-eth-engine-pricing/tests",
]
local-reth = [
    "reaper-eth-engine-core/local-reth",
    "reaper-eth-engine-database/local-reth",
    "reaper-eth-engine-types/local-reth",
    "reaper-eth-engine-pricing/local-reth",
    "reaper-eth-engine-inspect/local-reth",
    "reaper-eth-engine-reth-tracing/local-reth",
]
local-clickhouse = [
    "reaper-eth-engine-database/local-clickhouse",
    "reaper-eth-engine-core/local-clickhouse",
    "reaper-eth-engine-inspect/local-clickhouse",
    "reaper-eth-engine-classifier/local-clickhouse",
    "reaper-eth-engine-types/local-clickhouse",
]
uni-v3-ticks = ["reaper-eth-engine-pricing/uni-v3-ticks"]
dyn-decode = ["reaper-eth-engine-core/dyn-decode"]

[[bin]]
name = "reaper-eth-engine"
path = "src/main.rs"
