[package]
name = "eth-execution-telegram-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.13"
lambda_runtime = "0.13"
reqwest = { version = "0.12", features = [
    "multipart",
    "json",
    "native-tls-vendored",
], default-features = false }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
] }
teloxide = { version = "0.12", features = ["macros", "trace-adaptor"] }
mime = "0.3.17"
regex = "1.10"
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.39"
chrono = "0.4"
aws-sdk-secretsmanager = "1.41.0"
aws-sdk-sns = "1.39.0"
storm-trading-core = { path = "../../crates/core" }
storm-trading-eth-core = { path = "../../crates/eth-core" }
anyhow = "1.0.86"
thiserror = "1.0.63"

[[bin]]
name = "eth-execution-telegram-bot"
path = "src/main.rs"
# test = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
