[package]
name = "reaper-eth-order-engine"
version = "0.1.0"
edition = "2021"


[dependencies]
alloy-primitives = "0.8.0"
alloy-sol-types = "0.8.0"
anyhow.workspace = true
bigdecimal = "0.4.5"
ethers.workspace = true
reqwest.workspace = true
serde_json.workspace = true
url = "2.5.2"
reaper-eth.workspace = true
eyre = { version = "0.6" }

# [lib]
# name = "eth_order_engine"
# path = "src/lib.rs"

[[bin]]
name = "reaper-eth-order-engine"
path = "src/main.rs"
