[package]
name = "reaper-eth-order-fill-service"
publish = false
version = "0.1.0"
edition = "2021"

[dependencies]
reaper-eth.workspace = true

alloy-primitives.workspace = true
alloy-sol-types.workspace = true
anyhow.workspace = true
bigdecimal = "0.4.5"
ethers.workspace = true
reqwest.workspace = true
serde_json.workspace = true
url.workspace = true
eyre.workspace = true

# [lib]
# name = "eth_order_engine"
# path = "src/lib.rs"

[[bin]]
name = "reaper-eth-order-fill-service"
path = "src/main.rs"
