[package]
name = "eth-order-telegram-bot"
version = "0.1.0"
edition = "2021"
description = "A Telegram bot used by Storm Software to handle Ethereum notifications."

[dependencies]
lambda_http = "0.13"
lambda_runtime = "0.13"
reqwest = { version = "0.12", features = [
    "multipart",
    "json",
    "native-tls-vendored",
], default-features = false }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
] }
teloxide = { version = "0.13", features = [
    "macros",
    "webhooks",
    "webhooks-axum",
    "trace-adaptor",
    "cache-me",
] }
mime = "0.3.17"
regex = "1.10"
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
chrono = "0.4"
aws-sdk-secretsmanager = "1.41.0"
aws-sdk-sns = "1.39.0"
storm-trading-aws = { path = "../../crates/aws" }
storm-trading-eth = { path = "../../crates/eth" }
anyhow = "1.0.86"
thiserror = "1.0.63"
dotenvy = "0.15.7"

[lib]
name = "eth_order_telegram_bot"
path = "src/lib.rs"

[[bin]]
name = "eth-order-telegram-bot"
path = "src/main.rs"
# test = false
