[package]
name = "eth-order-telegram-bot"
version = "0.1.0"
edition = "2021"
description = "A Telegram bot used by Storm Software to handle Ethereum notifications."

[dependencies]
aws-config = { workspace = true, features = ["behavior-version-latest"] }
chrono.workspace = true
lambda_http = "0.13"
lambda_runtime = "0.13"
reqwest = { workspace = true, features = [
    "multipart",
    "json",
    "native-tls-vendored",
], default-features = false }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true, features = ["log"] }
teloxide = { version = "0.13", features = [
    "macros",
    "webhooks",
    "webhooks-axum",
    "trace-adaptor",
    "cache-me",
] }
mime = "0.3.17"
regex = "1.10"
aws-sdk-sns = "1.39.0"
storm-trading-aws.workspace = true
storm-trading-eth.workspace = true
anyhow.workspace = true
thiserror.workspace = true
dotenvy.workspace = true

[lib]
name = "eth_order_telegram_bot"
path = "src/lib.rs"

[[bin]]
name = "eth-order-telegram-bot"
path = "src/main.rs"
# test = false
