[package]
name = "storm-trading-aws"
description = "A core AWS helper crate containing schema definitions and validation logic."
version = "0.1.0"
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
homepage = { workspace = true }
documentation = "https://docs.rs/storm-trading-aws"
readme = "./README.md"

[dependencies]
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "json",
    "env-filter",
    "std",
] }
aws-config = { version = "1.5.5", features = ["behavior-version-latest"] }

[lib]
name = "storm_trading_aws"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
