[package]
name = "reaper-aws"
description = "A core AWS helper crate containing schema definitions and validation logic."
version = "0.0.1"
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
homepage = { workspace = true }
documentation = "https://docs.rs/reaper-aws"
readme = "./README.md"

[dependencies]
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, default-features = false, features = [
    "fmt",
    "json",
    "env-filter",
    "std",
] }
aws-config = { workspace = true, features = ["behavior-version-latest"] }

[lib]
name = "reaper_aws"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
