[package]
name = "storm-trading-core"
description = "A core library crate that provides various utilities and functions to facilitate trading."
version = "0.1.0"
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
homepage = { workspace = true }
documentation = "https://docs.rs/storm-trading-core"
readme = "./README.md"

## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
## RUSTDOC CONFIGURATION
## Includes KaTeX for math rendering.
## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--html-in-header", "katex_header.html", "--cfg", "docsrs"]

[dependencies]
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
yansi = "1.0.1"
ansi_term = "0.12.1"
tracing = "0.1.36"
tracing-bunyan-formatter = "0.3.4"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = [
    "fmt",
    "env-filter",
    "ansi",
] }
chrono = "0.4.22"
num = { version = "0.4.1", features = ["rand"] }
time = { version = "0.3.36", features = ["macros"] }
polars = { version = "0.42.0", features = ["docs-selection"] }
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
rust_decimal = "1.34.3"
statrs = "0.17.1"
thiserror = "1.0.57"

[lib]
name = "storm_trading_core"
path = "src/lib.rs"
