[package]
name = "reaper-core"
description = "A core library crate that provides various utilities and functions to facilitate trading."
version = "0.1.0"
publish = false
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
homepage = { workspace = true }
documentation = "https://docs.rs/reaper-core"
readme = "./README.md"

## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
## RUSTDOC CONFIGURATION
## Includes KaTeX for math rendering.
## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--html-in-header", "katex_header.html", "--cfg", "docsrs"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
num = { version = "0.4.3", features = ["rand"] }
time = { version = "0.3.36", features = ["macros"] }
polars = { version = "0.42.0", features = ["docs-selection"] }
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
rust_decimal = "1.34.3"
statrs = "0.17.1"
thiserror.workspace = true
plotters = "0.3.7"
plotly = "0.9.1"
derive_builder = "0.20.2"
rand = "0.8.5"
rand_distr = "0.4.3"
yahoo_finance_api = "2.1.0"

[lib]
name = "reaper_core"
path = "src/lib.rs"
