[package]
name = "storm-trading-eth-core"
description = "A core Etherium trading crate containing schema definitions and validation logic."
version = "0.1.0"
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
homepage = { workspace = true }
documentation = "https://docs.rs/storm-trading-eth-core"
readme = "./README.md"

[dependencies]
ethers = "2.0.14"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
